// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getHakuByValues returns correct haku given different hakulomake variations 1`] = `
Object {
  "ajastettuJulkaisu": "2019-11-16T08:44",
  "alkamiskausiKoodiUri": "alkamiskausi_1#1",
  "alkamisvuosi": 2020,
  "hakuajat": Array [
    Object {
      "alkaa": "2019-04-16T08:44",
      "paattyy": "2019-04-18T08:44",
    },
    Object {
      "alkaa": "2019-06-16T08:44",
      "paattyy": "2019-06-18T08:44",
    },
  ],
  "hakukohteenLiittamisenTakaraja": "2019-09-16T08:44",
  "hakukohteenMuokkaamisenTakaraja": "2019-10-16T08:44",
  "hakulomakeId": null,
  "hakulomakeKuvaus": Object {},
  "hakulomakeLinkki": Object {
    "fi": "https://google.fi",
  },
  "hakulomaketyyppi": "muu",
  "hakutapaKoodiUri": "hakutapa_1#1",
  "kielivalinta": Array [
    "fi",
    "sv",
  ],
  "kohdejoukkoKoodiUri": "kohde_1#1",
  "kohdejoukonTarkenneKoodiUri": null,
  "metadata": Object {
    "tulevaisuudenAikataulu": Array [
      Object {
        "alkaa": "2019-08-16T08:44",
        "paattyy": "2019-08-18T08:44",
      },
      Object {
        "alkaa": "2019-09-16T08:44",
        "paattyy": "2019-09-18T08:44",
      },
    ],
    "yhteyshenkilot": Array [
      Object {
        "nimi": Object {
          "fi": "Fi nimi",
          "sv": "Sv nimi",
        },
        "puhelinnumero": Object {
          "fi": "Fi puhelinnumero",
          "sv": "Sv puhelinnumero",
        },
        "sahkoposti": Object {
          "fi": "Fi sähköposti",
          "sv": "Sv sähköposti",
        },
        "titteli": Object {
          "fi": "Fi titteli",
          "sv": "Sv titteli",
        },
        "wwwSivu": Object {
          "fi": "Fi verkkosivu",
          "sv": "Sv verkkosivu",
        },
      },
    ],
  },
  "nimi": Object {
    "fi": "Nimi",
    "sv": "Namn",
  },
  "valintakokeet": Array [
    Object {
      "tilaisuudet": Array [
        Object {
          "aika": Object {
            "alkaa": "2019-04-16T08:44",
            "paattyy": "2019-04-18T08:44",
          },
          "lisatietoja": Object {
            "fi": "fi lisatietoja",
            "sv": "sv lisatietoja",
          },
          "osoite": Object {
            "osoite": Object {
              "fi": "fi osoite",
              "sv": "sv osoite",
            },
            "postinumero": "00520",
            "postitoimipaikka": Object {
              "fi": "fi posititoimipaikka",
              "sv": "sv posititoimipaikka",
            },
          },
        },
      ],
      "tyyppi": "tyyppi_1#1",
    },
  ],
}
`;

exports[`getHakuByValues returns correct haku given different hakulomake variations 2`] = `
Object {
  "ajastettuJulkaisu": "2019-11-16T08:44",
  "alkamiskausiKoodiUri": "alkamiskausi_1#1",
  "alkamisvuosi": 2020,
  "hakuajat": Array [
    Object {
      "alkaa": "2019-04-16T08:44",
      "paattyy": "2019-04-18T08:44",
    },
    Object {
      "alkaa": "2019-06-16T08:44",
      "paattyy": "2019-06-18T08:44",
    },
  ],
  "hakukohteenLiittamisenTakaraja": "2019-09-16T08:44",
  "hakukohteenMuokkaamisenTakaraja": "2019-10-16T08:44",
  "hakulomakeId": null,
  "hakulomakeKuvaus": Object {
    "fi": "kuvaus",
  },
  "hakulomakeLinkki": Object {},
  "hakulomaketyyppi": "ei sähköistä",
  "hakutapaKoodiUri": "hakutapa_1#1",
  "kielivalinta": Array [
    "fi",
    "sv",
  ],
  "kohdejoukkoKoodiUri": "kohde_1#1",
  "kohdejoukonTarkenneKoodiUri": null,
  "metadata": Object {
    "tulevaisuudenAikataulu": Array [
      Object {
        "alkaa": "2019-08-16T08:44",
        "paattyy": "2019-08-18T08:44",
      },
      Object {
        "alkaa": "2019-09-16T08:44",
        "paattyy": "2019-09-18T08:44",
      },
    ],
    "yhteyshenkilot": Array [
      Object {
        "nimi": Object {
          "fi": "Fi nimi",
          "sv": "Sv nimi",
        },
        "puhelinnumero": Object {
          "fi": "Fi puhelinnumero",
          "sv": "Sv puhelinnumero",
        },
        "sahkoposti": Object {
          "fi": "Fi sähköposti",
          "sv": "Sv sähköposti",
        },
        "titteli": Object {
          "fi": "Fi titteli",
          "sv": "Sv titteli",
        },
        "wwwSivu": Object {
          "fi": "Fi verkkosivu",
          "sv": "Sv verkkosivu",
        },
      },
    ],
  },
  "nimi": Object {
    "fi": "Nimi",
    "sv": "Namn",
  },
  "valintakokeet": Array [
    Object {
      "tilaisuudet": Array [
        Object {
          "aika": Object {
            "alkaa": "2019-04-16T08:44",
            "paattyy": "2019-04-18T08:44",
          },
          "lisatietoja": Object {
            "fi": "fi lisatietoja",
            "sv": "sv lisatietoja",
          },
          "osoite": Object {
            "osoite": Object {
              "fi": "fi osoite",
              "sv": "sv osoite",
            },
            "postinumero": "00520",
            "postitoimipaikka": Object {
              "fi": "fi posititoimipaikka",
              "sv": "sv posititoimipaikka",
            },
          },
        },
      ],
      "tyyppi": "tyyppi_1#1",
    },
  ],
}
`;

exports[`getHakuByValues returns correct haku given form values 1`] = `
Object {
  "ajastettuJulkaisu": "2019-11-16T08:44",
  "alkamiskausiKoodiUri": "alkamiskausi_1#1",
  "alkamisvuosi": 2020,
  "hakuajat": Array [
    Object {
      "alkaa": "2019-04-16T08:44",
      "paattyy": "2019-04-18T08:44",
    },
    Object {
      "alkaa": "2019-06-16T08:44",
      "paattyy": "2019-06-18T08:44",
    },
  ],
  "hakukohteenLiittamisenTakaraja": "2019-09-16T08:44",
  "hakukohteenMuokkaamisenTakaraja": "2019-10-16T08:44",
  "hakulomakeId": "12345",
  "hakulomakeKuvaus": Object {},
  "hakulomakeLinkki": Object {},
  "hakulomaketyyppi": "ataru",
  "hakutapaKoodiUri": "hakutapa_1#1",
  "kielivalinta": Array [
    "fi",
    "sv",
  ],
  "kohdejoukkoKoodiUri": "kohde_1#1",
  "kohdejoukonTarkenneKoodiUri": null,
  "metadata": Object {
    "tulevaisuudenAikataulu": Array [
      Object {
        "alkaa": "2019-08-16T08:44",
        "paattyy": "2019-08-18T08:44",
      },
      Object {
        "alkaa": "2019-09-16T08:44",
        "paattyy": "2019-09-18T08:44",
      },
    ],
    "yhteyshenkilot": Array [
      Object {
        "nimi": Object {
          "fi": "Fi nimi",
          "sv": "Sv nimi",
        },
        "puhelinnumero": Object {
          "fi": "Fi puhelinnumero",
          "sv": "Sv puhelinnumero",
        },
        "sahkoposti": Object {
          "fi": "Fi sähköposti",
          "sv": "Sv sähköposti",
        },
        "titteli": Object {
          "fi": "Fi titteli",
          "sv": "Sv titteli",
        },
        "wwwSivu": Object {
          "fi": "Fi verkkosivu",
          "sv": "Sv verkkosivu",
        },
      },
    ],
  },
  "nimi": Object {
    "fi": "Nimi",
    "sv": "Namn",
  },
  "valintakokeet": Array [
    Object {
      "tilaisuudet": Array [
        Object {
          "aika": Object {
            "alkaa": "2019-04-16T08:44",
            "paattyy": "2019-04-18T08:44",
          },
          "lisatietoja": Object {
            "fi": "fi lisatietoja",
            "sv": "sv lisatietoja",
          },
          "osoite": Object {
            "osoite": Object {
              "fi": "fi osoite",
              "sv": "sv osoite",
            },
            "postinumero": "00520",
            "postitoimipaikka": Object {
              "fi": "fi posititoimipaikka",
              "sv": "sv posititoimipaikka",
            },
          },
        },
      ],
      "tyyppi": "tyyppi_1#1",
    },
  ],
}
`;

exports[`getValuesByHaku returns correct form values given different hakulomake variations 1`] = `
Object {
  "aikataulut": Object {
    "aikataulu": Array [
      Object {
        "alkaa": "2019-02-20T12:28",
        "paattyy": "2019-08-01T12:45",
      },
    ],
    "ajastettuJulkaisu": "2020-01-20T05:00",
    "hakuaika": Array [
      Object {
        "alkaa": "2019-03-29T12:28",
        "paattyy": "2019-09-29T12:30",
      },
    ],
    "kausi": "kausi_1#1",
    "lisaamisenTakaraja": "2019-03-29T12:28",
    "muokkauksenTakaraja": "2019-03-11T09:45",
    "vuosi": Object {
      "value": "2020",
    },
  },
  "hakulomake": Object {
    "kuvaus": Object {},
    "linkki": Object {
      "fi": "https://google.fi",
    },
    "lomake": Object {},
    "tyyppi": "muu",
  },
  "hakutapa": "hakutapa_1#1",
  "kieliversiot": Array [
    "fi",
    "sv",
  ],
  "kohdejoukko": "kohdejoukko_1#1",
  "nimi": Object {
    "fi": "Fi nimi",
    "sv": "Sv nimi",
  },
  "valintakoe": Object {
    "tilaisuudet": Object {
      "tyyppi_1#1": Array [
        Object {
          "alkaa": "2019-04-16T08:44",
          "lisatietoja": Object {
            "fi": "fi lisatietoja",
            "sv": "sv lisatietoja",
          },
          "osoite": Object {
            "fi": "fi osoite",
            "sv": "sv osoite",
          },
          "paattyy": "2019-04-18T08:44",
          "postinumero": "00520",
          "postitoimipaikka": Object {
            "fi": "fi posititoimipaikka",
            "sv": "sv posititoimipaikka",
          },
        },
      ],
    },
    "tyypit": Array [
      Object {
        "value": "tyyppi_1#1",
      },
    ],
  },
  "yhteyshenkilot": Array [
    Object {
      "nimi": Object {
        "fi": "Fi nimi",
        "sv": "Sv nimi",
      },
      "puhelinnumero": Object {
        "fi": "Fi puhelinnumero",
        "sv": "Sv puhelinnumero",
      },
      "sahkoposti": Object {
        "fi": "Fi sähköposti",
        "sv": "Sv sähköposti",
      },
      "titteli": Object {
        "fi": "Fi titteli",
        "sv": "Sv titteli",
      },
      "verkkosivu": Object {
        "fi": "Fi verkkosivu",
        "sv": "Sv verkkosivu",
      },
    },
  ],
}
`;

exports[`getValuesByHaku returns correct form values given different hakulomake variations 2`] = `
Object {
  "aikataulut": Object {
    "aikataulu": Array [
      Object {
        "alkaa": "2019-02-20T12:28",
        "paattyy": "2019-08-01T12:45",
      },
    ],
    "ajastettuJulkaisu": "2020-01-20T05:00",
    "hakuaika": Array [
      Object {
        "alkaa": "2019-03-29T12:28",
        "paattyy": "2019-09-29T12:30",
      },
    ],
    "kausi": "kausi_1#1",
    "lisaamisenTakaraja": "2019-03-29T12:28",
    "muokkauksenTakaraja": "2019-03-11T09:45",
    "vuosi": Object {
      "value": "2020",
    },
  },
  "hakulomake": Object {
    "kuvaus": Object {
      "fi": "kuvaus",
    },
    "linkki": Object {},
    "lomake": Object {},
    "tyyppi": "ei sähköistä",
  },
  "hakutapa": "hakutapa_1#1",
  "kieliversiot": Array [
    "fi",
    "sv",
  ],
  "kohdejoukko": "kohdejoukko_1#1",
  "nimi": Object {
    "fi": "Fi nimi",
    "sv": "Sv nimi",
  },
  "valintakoe": Object {
    "tilaisuudet": Object {
      "tyyppi_1#1": Array [
        Object {
          "alkaa": "2019-04-16T08:44",
          "lisatietoja": Object {
            "fi": "fi lisatietoja",
            "sv": "sv lisatietoja",
          },
          "osoite": Object {
            "fi": "fi osoite",
            "sv": "sv osoite",
          },
          "paattyy": "2019-04-18T08:44",
          "postinumero": "00520",
          "postitoimipaikka": Object {
            "fi": "fi posititoimipaikka",
            "sv": "sv posititoimipaikka",
          },
        },
      ],
    },
    "tyypit": Array [
      Object {
        "value": "tyyppi_1#1",
      },
    ],
  },
  "yhteyshenkilot": Array [
    Object {
      "nimi": Object {
        "fi": "Fi nimi",
        "sv": "Sv nimi",
      },
      "puhelinnumero": Object {
        "fi": "Fi puhelinnumero",
        "sv": "Sv puhelinnumero",
      },
      "sahkoposti": Object {
        "fi": "Fi sähköposti",
        "sv": "Sv sähköposti",
      },
      "titteli": Object {
        "fi": "Fi titteli",
        "sv": "Sv titteli",
      },
      "verkkosivu": Object {
        "fi": "Fi verkkosivu",
        "sv": "Sv verkkosivu",
      },
    },
  ],
}
`;

exports[`getValuesByHaku returns correct form values given haku 1`] = `
Object {
  "aikataulut": Object {
    "aikataulu": Array [
      Object {
        "alkaa": "2019-02-20T12:28",
        "paattyy": "2019-08-01T12:45",
      },
    ],
    "ajastettuJulkaisu": "2020-01-20T05:00",
    "hakuaika": Array [
      Object {
        "alkaa": "2019-03-29T12:28",
        "paattyy": "2019-09-29T12:30",
      },
    ],
    "kausi": "kausi_1#1",
    "lisaamisenTakaraja": "2019-03-29T12:28",
    "muokkauksenTakaraja": "2019-03-11T09:45",
    "vuosi": Object {
      "value": "2020",
    },
  },
  "hakulomake": Object {
    "kuvaus": Object {},
    "linkki": Object {},
    "lomake": Object {
      "ataru": Object {
        "value": "12345",
      },
    },
    "tyyppi": "ataru",
  },
  "hakutapa": "hakutapa_1#1",
  "kieliversiot": Array [
    "fi",
    "sv",
  ],
  "kohdejoukko": "kohdejoukko_1#1",
  "nimi": Object {
    "fi": "Fi nimi",
    "sv": "Sv nimi",
  },
  "valintakoe": Object {
    "tilaisuudet": Object {
      "tyyppi_1#1": Array [
        Object {
          "alkaa": "2019-04-16T08:44",
          "lisatietoja": Object {
            "fi": "fi lisatietoja",
            "sv": "sv lisatietoja",
          },
          "osoite": Object {
            "fi": "fi osoite",
            "sv": "sv osoite",
          },
          "paattyy": "2019-04-18T08:44",
          "postinumero": "00520",
          "postitoimipaikka": Object {
            "fi": "fi posititoimipaikka",
            "sv": "sv posititoimipaikka",
          },
        },
      ],
    },
    "tyypit": Array [
      Object {
        "value": "tyyppi_1#1",
      },
    ],
  },
  "yhteyshenkilot": Array [
    Object {
      "nimi": Object {
        "fi": "Fi nimi",
        "sv": "Sv nimi",
      },
      "puhelinnumero": Object {
        "fi": "Fi puhelinnumero",
        "sv": "Sv puhelinnumero",
      },
      "sahkoposti": Object {
        "fi": "Fi sähköposti",
        "sv": "Sv sähköposti",
      },
      "titteli": Object {
        "fi": "Fi titteli",
        "sv": "Sv titteli",
      },
      "verkkosivu": Object {
        "fi": "Fi verkkosivu",
        "sv": "Sv verkkosivu",
      },
    },
  ],
}
`;
